--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "github-webhook-handler": "^0.7.0"
+    "github-webhook-handler": "^0.7.0",
+    "discord.js": "^11.4.0"
   }
 }
