--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,7 @@ release-image:
   script:
     - 'docker pull "$CI_REGISTRY_IMAGE":"$DOCKER_IMG_VERSION"'
     - scp $FTP_USER@$FTP_HOST:~/env/"$DOCKER_NAME" .env || touch .env
+    - scp $FTP_USER@$FTP_HOST:~/dck/photongit/.env.json .env.json
     - docker rm --force "$DOCKER_NAME" || echo "Container already stopped."
     - docker run --env-file .env -d -e GITLAB_SHA="$CI_COMMIT_SHORT_SHA" -e GITLAB_ID="$CI_PIPELINE_IID" -e GITLAB_BRANCH="$CI_COMMIT_REF_NAME" --name "$DOCKER_NAME" -p "$PORT":10000 --restart always "$CI_REGISTRY_IMAGE":"$DOCKER_IMG_VERSION"
 
