--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ variables:
   DOCKER_DRIVER: overlay2
   CONTAINER_TEST_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:latest
-  PORT: 11500
+  EXT_PORT: 11500
   
 before_script:
     - 'which ssh-agent || ( apk update && apk add openssh-client )'
@@ -27,7 +27,6 @@ after_script:
 build:
   stage: build
   script:
-    - scp $FTP_USER@$FTP_HOST:~/dck/photongit/.env.json .env.json
     - docker build --pull -t $CONTAINER_TEST_IMAGE .
     - docker push $CONTAINER_TEST_IMAGE
 
@@ -48,7 +47,7 @@ release-image:
     - 'docker pull "$CI_REGISTRY_IMAGE":"$DOCKER_IMG_VERSION"'
     - scp $FTP_USER@$FTP_HOST:~/env/"$DOCKER_NAME" .env || touch .env
     - docker rm --force "$DOCKER_NAME" || echo "Container already stopped."
-    - docker run --env-file .env -d -e GITLAB_SHA="$CI_COMMIT_SHORT_SHA" -e GITLAB_ID="$CI_PIPELINE_IID" -e GITLAB_BRANCH="$CI_COMMIT_REF_NAME" --name "$DOCKER_NAME" -p "$PORT":10000 --restart always "$CI_REGISTRY_IMAGE":"$DOCKER_IMG_VERSION"
+    - docker run --env-file .env -d -e GITLAB_SHA="$CI_COMMIT_SHORT_SHA" -e GITLAB_ID="$CI_PIPELINE_IID" -e GITLAB_BRANCH="$CI_COMMIT_REF_NAME" --name "$DOCKER_NAME" -p "$EXT_PORT":10000 --restart always "$CI_REGISTRY_IMAGE":"$DOCKER_IMG_VERSION"
 
 .stop: &define_stop
   stage: deploy
