--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ release-image:
     - 'docker pull "$CI_REGISTRY_IMAGE":"$DOCKER_IMG_VERSION"'
     - scp $FTP_USER@$FTP_HOST:~/env/"$DOCKER_NAME" .env || touch .env
     - docker rm --force "$DOCKER_NAME" || echo "Container already stopped."
-    - docker run --env-file .env -d -e GITLAB_SHA="$CI_COMMIT_SHORT_SHA" -e GITLAB_ID="$CI_PIPELINE_IID" -e GITLAB_BRANCH="$CI_COMMIT_REF_NAME" --name "$DOCKER_NAME" -p "$EXT_PORT":10000 --restart always "$CI_REGISTRY_IMAGE":"$DOCKER_IMG_VERSION"
+    - docker run --env-file .env -d -e GITLAB_SHA="$CI_COMMIT_SHORT_SHA" -e GITLAB_ID="$CI_PIPELINE_IID" -e GITLAB_BRANCH="$CI_COMMIT_REF_NAME" --name "$DOCKER_NAME" -p 127.0.0.1:"$EXT_PORT":10000 --restart always "$CI_REGISTRY_IMAGE":"$DOCKER_IMG_VERSION"
 
 .stop: &define_stop
   stage: deploy
